--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Add Open Graph (OGP) tags for thumbnail -->
+    <meta property="og:image" content="./Home.png">
+    <meta property="og:image:width" content="1366">
+    <meta property="og:image:height" content="625">
+    <meta property="og:title" content="Semblante">
+    <meta property="og:description" content="Portfolio">
+    <meta property="og:url" content="https://semblantelloyd.netlify.app/">
+    <meta property="og:type" content="website">
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="icon" type="image/svg+xml" href="./logo.svg" />
